# Ai-assistant-

./: .dockerignore  CONTRIBUTING.md  Dockerfile  Makefile  README-DEV.md  README.md  alembic.ini  docker-compose.demo.yml  docker-compose.yml  env.example  pyproject.toml  pytest.ini
data/kb/: sample_company_data.json
deployments/k8s/: app.yaml  celery.yaml  configmap.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml
docs/: ARCHITECTURE.md  CEO_VISION_SETUP.md  COMPETITIVE_ANALYSIS.md  GO_TO_MARKET.md  SAAS_DEPLOYMENT.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: demo_seed.py  deploy.sh  deploy_k8s.py  init-db.sql  load_demo_data.py  manage_db.py  run_integration_tests.py  run_tests.py  seed_kb.py  start_demo.sh  starter_pack.py
src/: __init__.py  app.py  config.py
src/agents/: autonomous_workflows.py
src/ai/: ceo_vision_chain.py  chain.py  context_injector.py  decision_engine.py  model_switcher.py  prompts.py  revenue_intelligence.py
src/analytics/: outcomes.py  telemetry.py
src/auth/: dependencies.py
src/frontend/: dashboard.py
src/frontend/templates/: dashboard.html  landing.html  revenue.html
src/integrations/: asana_client.py  deep_connectors.py  gmail_client.py  hooks.py  mcp_gateway.py  meeting_recorder.py  slack_client.py
src/integrations/webhooks/: __init__.py  asana.py  gmail.py  slack.py
src/jobs/: __init__.py  asana_tasks.py  celery_app.py  email_tasks.py  slack_tasks.py  tasks.py  workflow_tasks.py
src/jobs/tasks/: maintenance_tasks.py  meeting_tasks.py
src/kb/: enhanced_retriever.py  retriever.py  seeder.py
src/logging/: __init__.py  setup.py
src/meetings/: automation.py
src/saas/: __init__.py  auth.py  models.py  subscriptions.py
src/security/: privacy_controls.py
src/storage/: __init__.py  db.py  models.py
src/web/: __init__.py  ceo_vision.py  dashboard.py  demo.py  landing.py
src/web/templates/: base.html
src/web/templates/dashboard/: ceo_vision.html  home.html  playground.html
src/workflows/: engine.py  router.py  visual_engine.py
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end.py  test_webhooks.py
tests/unit/: CEOvision.md  guide.md  test_config.py  test_models.py  the sale.md  vibe.md
